--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -22,11 +22,11 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem;
+      padding: 1%;
     }
 
     h2 {
-      margin-bottom: 1rem;
+      margin-bottom: 10px;
       font-weight: 400;
       color: var(--primary);
     }
@@ -34,15 +34,15 @@
     table {
       border-collapse: collapse;
       width: 100%;
-      max-width: 400px;
+      max-width: 50%;
       background-color: var(--surface);
-      border-radius: 12px;
+      border-radius: 1%;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
     }
 
     th, td {
-      padding: 12px;
+      padding: 2%;
       text-align: center;
     }
 
