--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -76,7 +76,7 @@
 
     const monthNames = ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
                         "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"];
-    const days = ["Dom", "Lun", "Mar", "Mié", "Jue", "Vie", "Sáb"];
+    const days = ["D", "L", "M", "X", "J", "V", "S"];
 
     document.getElementById("month-year").textContent = `${monthNames[month]} ${year}`;
 
